[tool.poetry]
name = "nodestream-plugin-akamai"
version = "0.11.2"
description = ""
authors = [
    "Zach Probst <Zach_Probst@intuit.com>",
    "Chad Cloes <Chad_Cloes@intuit.com>",
    "Bryan Norman <Bryan_Norman@intuit.com>",
    "Gabe Gallagher <Gabe_Gallagher@intuit.com>",
    "Grant Hoffman <Grant_Hoffman@intuit.com>"
]
packages = [
    { include = "nodestream_akamai" }
]

[tool.poetry.dependencies]
python = "^3.10"
edgegrid-python = "^1.2.1"
python-json-logger = "^2.0.2"
python-dotenv = ">=0.21.0,< 2"
click = "^8.1.3"
boto3 = "^1.26.3"
nodestream = "^0.11.0"
jsonpath-ng = "^1.5.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
pytest-xdist = "^2.5.0"
black = "^22.3.0"
freezegun = "^1.2.1"
responses = "^0.21.0"
pre-commit = "^2.19.0"
pytest-snapshot = "^0.9.0"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."nodestream.plugins"]
projects = "nodestream_akamai.plugin"
