[tool.poetry]
name = "nodestream-plugin-akamai"
version = "0.15.0a0"
description = "Pipeline Plugin for Akamai Data"
authors = [
    "Zach Probst <Zach_Probst@intuit.com>",
    "Chad Cloes <Chad_Cloes@intuit.com>",
    "Bryan Norman <Bryan_Norman@intuit.com>",
    "Gabe Gallagher <Gabe_Gallagher@intuit.com>",
    "Grant Hoffman <Grant_Hoffman@intuit.com>",
    "Stuart Macleod <SMacleod@akamai.com>",
    "Jon Bristow <Jonathan_Bristow@intuit.com>"
]
packages = [
    { include = "nodestream_akamai" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <4.0"
edgegrid-python = "^1.2.1"
nodestream = "^0.15.0a0"
jsonpath-ng = "^1.5.3"
requests = "^2.32.4"
urllib3 = "^2.5.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
isort = "^7.0.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.14.1"
pytest-xdist = "^3.8.0"
black = "^25.1.0"
responses = "^0.25.7"
pre-commit = "^4.2.0"
pytest-snapshot = "^0.9.0"
ruff = "^0.14.3"
pytest-asyncio = "^1.1.0"
pytest = "^8.4.1"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."nodestream.plugins"]
projects = "nodestream_akamai.plugin"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

[tool.ruff.lint]
select = ["A", "ARG", "ASYNC", "B", "C4", "DTZ", "E", "EM", "ERA", "F", "FBT", "FURB", "G", "I", "INP", "N", "PIE", "PT", "RET", "RUF", "S", "SIM", "T20", "TC", "UP", ]
ignore = ["N999", "UP", "E501", "S106", "ERA001"]
unfixable = ["B"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106"]
